# Pokemon-CLI

./: README.md
pokemon-cli/: pyproject.toml
pokemon-cli/appdata/: moves.json  type_chart.json
pokemon-cli/appdata/pokedex/: bulbasaur.json  charmander.json  ivysaur.json  squirtle.json
pokemon-cli/appdata/schema/: move.schema.json  pokedex.schema.json  type_chart.schema.json
pokemon-cli/src/pokemon_cli/: __init__.py  path.py
pokemon-cli/src/pokemon_cli/pokemon/: moves.py  pokemon.py  types.py
