[project]
name = "pokemon-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "OliverRose33", email = "117239457+OliverRose33@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[project.scripts]
pokemon-cli = "pokemon_cli:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"